--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,16 +23,11 @@
 	// "postCreateCommand": "cat /etc/os-release",
 
 	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "devcontainer"
-	"service": "app",
-	"shutdownAction": "stopCompose",
-	"workspaceFolder": "/workspace",
 	"customizations": {
 		"vscode": {
 			"extensions": [
+				"ms-azuretools.vscode-docker",
+				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-python.python",
 				"donjayamanne.python-environment-manager",
