feat: 파이썬 스크립트로 ssh 연결, 서버 정보 획득, ansible 실행하기

--- a/.devcontainer/docker-compose-devel.yml
+++ b/.devcontainer/docker-compose-devel.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    command: ["/bin/sh", "-c", "while sleep 1000;", "do:;", "done"]
+    command: ["/bin/sh", "-c", "while true; do sleep 1000; done"]
     ports:
       - 8000:8000
     volumes:
