--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-	"name": "Django Application Development",
+	"name": "Docker Management Application Development",
 	// "build": {
 	// 	// Sets the run context to one level up instead of the .devcontainer folder.
 	// 	"context": "..",
@@ -22,6 +22,10 @@
 	// Uncomment the next line to run commands after the container is created.
 	// "postCreateCommand": "cat /etc/os-release",
 
+	"service": "app",
+	"shutdownAction": "stopCompose",
+	"workspaceFolder": "/workspace",
+	
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
