--- a/ansible/roles/grafana/tasks/main.yml
+++ b/ansible/roles/grafana/tasks/main.yml
@@ -10,11 +10,13 @@
   template:
     src: templates/env.j2
     dest: "{{ lib_dir }}/env"
+    owner: "{{ host.owner }}"
 
 - name: Copy datasource file
   template:
     src: templates/datasource.json.j2
     dest: "{{ lib_dir }}/datasource.json"
+    owner: "{{ host.owner }}"
 
 - name: Create Grafana container
   community.docker.docker_container:
@@ -25,7 +27,7 @@
     restart_policy: unless-stopped
     detach: true
     ports:
-      - "{{ host_port }}":"{{ container_port }}"
+      - "{{ host_port }}:{{ container_port }}"
     networks:
       - name: "{{ network }}"
     volumes:
@@ -35,9 +37,9 @@
   community.docker.docker_container_exec:
     container: grafana
     command: |
-      curl -L \
-        -H "Content-Type: application/json" \
-        -H "Accept: application/json" \
-        -d @"/var/lib/grafana/datasource.json" \
-        "localhost:{{ host_port }}/api/datasources" \
+      curl
+        -X POST
+        -L localhost:{{ container_port }}/api/datasources
+        -H 'Content-Type: application/json'
+        -d @/var/lib/grafana/datasource.json
         -u admin:secretsecret
