--- a/docker_mgmt_webapp/package.json
+++ b/docker_mgmt_webapp/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.3.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-datasource-prometheus": "^2.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
   },
