feat: 패키지 추가 설정

--- a/docker_mgmt_webapp/tsconfig.json
+++ b/docker_mgmt_webapp/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowImportingTsExtensions": true,
+    "baseUrl": ".",
     "isolatedModules": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
@@ -11,6 +12,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "paths": {
+      "@/*": ["src/*"],
+    },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
