--- a/ansible/roles/prometheus/vars/main.yml
+++ b/ansible/roles/prometheus/vars/main.yml
@@ -1,7 +1,3 @@
-host:
-  owner: vagrant
-  group: vagrant
-
 lib_dir: /usr/share/prometheus
 
 host_port: "9090"
@@ -10,3 +6,5 @@ container_port: "9090"
 metrics_port: "9323"
 node_exporter_port: "9100"
 cadvisor_port: "8888"
+
+registry_mirror_host: 
