--- a/docker_mgmt_webapp/package.json
+++ b/docker_mgmt_webapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "chart.js": "^4.3.2",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-datasource-prometheus": "^2.1.1",
